# tweedledum

./: .gitignore  CMakeLists.txt  README.md  dev.sh  pyproject.toml  shell.nix
examples/: Compiler2.ipynb  Compiler_Benchmark.ipynb  Demo.ipynb  clique_counter.py
python/test/: test_Compiler2.py  test_Inliner.py  test_Unrolling.py
python/tweedledum/: __init__.py
python/tweedledum/bool_function_compiler/: __init__.py  bitvec.py  classical_expression_evaluator.py  decorators.py  function_parser.py  loop_unroller.py  meta_inliner.py  quantum_circuit_function.py  transformer.py  variable_classifier.py
python/tweedledum/bool_function_compiler/meta_fns/: __init__.py  batcher_sort.py  binary_popcount_network.py  sorting_network.py
python/tweedledum/qiskit/: converters.py
python/tweedledum/synthesis/: synthesis.cpp
python/tweedledum/utils/: utils.cpp
